Fix microsite's footer spacing issue (fixes #1440)

--- a/docs/_assets/main.css
+++ b/docs/_assets/main.css
@@ -262,7 +262,7 @@ body:not(.about) .mdl-navigation__link.download > button {
   justify-content: center;
   align-items: center;
 }
-.docs-footer.mdl-mini-footer ul > a {
+.docs-footer.mdl-mini-footer ul > li > a {
   margin: 0 8px;
   font-weight: 400;
   font-size: 12px;
